Java/Assignmemt 3/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;E:\Java work\Semester 2\Assignmemt 3
-d
E:\Java work\Semester 2\Assignmemt 3\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
E:\Java work\Semester 2\Assignmemt 3\Event.java
<---- end of javadoc command ---->
Loading source file E:\Java work\Semester 2\Assignmemt 3\Event.java...
E:\Java work\Semester 2\Assignmemt 3\Event.java:54: error: ';' expected
        sold = 0
                ^
1 error
